--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -43,6 +43,7 @@ http {
         location / {
             proxy_pass   http://127.0.0.1:39000/;
             proxy_redirect default ;
+	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
 	location /rest/ {
