--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -52,7 +52,25 @@ http {
             proxy_redirect default ;
 	}
 
+	location /hengwei/rest/ {
+	    proxy_pass   http://127.0.0.1:39301/;
+            proxy_redirect default ;
+	}
+
 	location /web_socket/ {
+	    access_log  logs/web_socket.log;
+	    proxy_pass http://127.0.0.1:37079/;
+	    proxy_set_header X-Real-IP $remote_addr;
+	    proxy_set_header Host $host;
+	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+	    # WebSocket support (nginx 1.4)
+	    proxy_http_version 1.1;
+	    proxy_set_header Upgrade $http_upgrade;
+	    proxy_set_header Connection "upgrade";
+	}
+
+	location /hengwei/web_socket/ {
 	    access_log  logs/web_socket.log;
 	    proxy_pass http://127.0.0.1:37079/;
 	    proxy_set_header X-Real-IP $remote_addr;
