--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -29,7 +29,17 @@ http {
     #tcp_nopush     on;
 
     #keepalive_timeout  0;
-    keepalive_timeout  65;
+    keepalive_timeout  180;
+
+    upstream web_server {
+        server 127.0.0.1:39000;
+        keepalive 32; 
+    }
+
+    upstream rest_server {
+        server 127.0.0.1:39301;
+        keepalive 32; 
+    }
 
     #gzip  on;
 
@@ -42,19 +52,32 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-            proxy_pass   http://127.0.0.1:39000/;
+            proxy_pass   http://web_server;
             proxy_redirect default ;
-	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
 	location /rest/ {
-	    proxy_pass   http://127.0.0.1:39301/;
-            proxy_redirect default ;
+	    proxy_pass   http://rest_server;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+      proxy_redirect default ;
 	}
 
 	location /hengwei/rest/ {
-	    proxy_pass   http://127.0.0.1:39301/;
-            proxy_redirect default ;
+	    proxy_pass   http://rest_server;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+      proxy_redirect default ;
+	}
+
+  location /hengwei/ {
+	    proxy_pass   http://web_server;
+      proxy_redirect default ;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
 	}
 
 	location /web_socket/ {
