update conf for keep alive

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -31,13 +31,15 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  180;
 
-    upstream web_server {
-        server 127.0.0.1:39000;
-        keepalive 32; 
-    }
+    
 
     upstream rest_server {
         server 127.0.0.1:39301;
+        keepalive 32; 
+    }
+
+    upstream web_server {
+        server 127.0.0.1:39000;
         keepalive 32; 
     }
 
@@ -60,14 +62,7 @@ http {
         }
 
 	location /rest/ {
-	    proxy_pass   http://rest_server;
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-      proxy_redirect default ;
-	}
-
-	location /hengwei/rest/ {
-	    proxy_pass   http://rest_server;
+	    proxy_pass   http://rest_server/;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
       proxy_redirect default ;
@@ -78,6 +73,13 @@ http {
       proxy_redirect default ;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
+	}
+
+	location /hengwei/rest/ {
+	    proxy_pass   http://rest_server/;
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+      proxy_redirect default ;
 	}
 
 	location /web_socket/ {
