--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -61,52 +61,60 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
-	location /rest/ {
-	    proxy_pass   http://rest_server/;
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-      proxy_redirect default ;
-	}
+        location /nginx_status {
+            stub_status on;
+            access_log off;
+            # allow xx.xx.xx.xx;
+            # deny all;
+            allow all;
+        }
 
-  location /hengwei/ {
-	    proxy_pass   http://web_server;
-      proxy_redirect default ;
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-	}
+    	location /rest/ {
+    	    proxy_pass   http://rest_server/;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_redirect default ;
+    	}
 
-	location /hengwei/rest/ {
-	    proxy_pass   http://rest_server/;
-      proxy_http_version 1.1;
-      proxy_set_header Connection "";
-      proxy_redirect default ;
-	}
+        location /hengwei/ {
+    	    proxy_pass   http://web_server;
+            proxy_redirect default ;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+    	}
 
-	location /web_socket/ {
-	    access_log  logs/web_socket.log;
-	    proxy_pass http://127.0.0.1:37079/;
-	    proxy_set_header X-Real-IP $remote_addr;
-	    proxy_set_header Host $host;
-	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    	location /hengwei/rest/ {
+    	    proxy_pass   http://rest_server/;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_redirect default ;
+    	}
 
-	    # WebSocket support (nginx 1.4)
-	    proxy_http_version 1.1;
-	    proxy_set_header Upgrade $http_upgrade;
-	    proxy_set_header Connection "upgrade";
-	}
+    	location /web_socket/ {
+    	    access_log  logs/web_socket.log;
+    	    proxy_pass http://127.0.0.1:37079/;
+    	    proxy_set_header X-Real-IP $remote_addr;
+    	    proxy_set_header Host $host;
+    	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-	location /hengwei/web_socket/ {
-	    access_log  logs/web_socket.log;
-	    proxy_pass http://127.0.0.1:37079/;
-	    proxy_set_header X-Real-IP $remote_addr;
-	    proxy_set_header Host $host;
-	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    	    # WebSocket support (nginx 1.4)
+    	    proxy_http_version 1.1;
+    	    proxy_set_header Upgrade $http_upgrade;
+    	    proxy_set_header Connection "upgrade";
+    	}
 
-	    # WebSocket support (nginx 1.4)
-	    proxy_http_version 1.1;
-	    proxy_set_header Upgrade $http_upgrade;
-	    proxy_set_header Connection "upgrade";
-	}
+    	location /hengwei/web_socket/ {
+    	    access_log  logs/web_socket.log;
+    	    proxy_pass http://127.0.0.1:37079/;
+    	    proxy_set_header X-Real-IP $remote_addr;
+    	    proxy_set_header Host $host;
+    	    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+    	    # WebSocket support (nginx 1.4)
+    	    proxy_http_version 1.1;
+    	    proxy_set_header Upgrade $http_upgrade;
+    	    proxy_set_header Connection "upgrade";
+    	}
 
         #error_page  404              /404.html;
 
