--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -59,6 +59,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Connection "";
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Remote_Addr $remote_addr;
         }
 
         location /nginx_status {
@@ -81,6 +82,7 @@ http {
             proxy_redirect default ;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
+            proxy_set_header Remote_Addr $remote_addr;
     	}
 
     	location /hengwei/rest/ {
