--- a/gammu/gammu.conf
+++ b/gammu/gammu.conf
@@ -26,7 +26,7 @@ outboxformat = unicode
 transmitformat = unicode
 
 service = files
-RunOnReceive = /var/spool/gammu/forward.sh
+RunOnReceive = tpt_sms_recv.bat
 inboxpath = data/gammu/inbox/
 outboxpath = data/gammu/outbox/
 sentsmspath = data/gammu/sent/
