rename log file

--- a/gammu/gammu.conf
+++ b/gammu/gammu.conf
@@ -15,7 +15,7 @@ connection = at9600
 #Database = smsd
 #PhoneID = second
 
-logfile = logs\smsd.log
+logfile = logs\smsd_console.log
 debuglevel = 2
 
 commtimeout = 1
