--- a/flyway/conf/flyway.conf
+++ b/flyway/conf/flyway.conf
@@ -75,7 +75,7 @@ flyway.locations=classpath:db.migration
 # flyway.skipDefaultResolvers=
 
 # Comma-separated list of directories containing JDBC drivers and Java-based migrations. (default: <INSTALL-DIR>/jars)
-flyway.jarDirs=../../lib/server_biz
+# flyway.jarDirs=./lib/server_biz
 
 # File name prefix for sql migrations (default: V )
 # Sql migrations have the following file name structure: prefixVERSIONseparatorDESCRIPTIONsuffix ,
